@@ -89,7 +89,7 @@ or head straight to the <a href="download/#2.2">download section</a>.
     </td>
     
     <td width="30%">
-      <table border="1" halign="left">
+      <table border=1 halign="left" frame="hsides" rules="all" cellpadding=2>
 	<colgroup align="left">
 	<colgroup align="left">
 	<colgroup align="left">
